package protocol;

//心跳请求包
message HeartBeatPacket{
    required int64 id  = 1;
    required SerializeType type  = 2 [default = JSON]; //序列化类型
    enum SerializeType {
        JSON =0;
        MSGPACK=1;
        PROTOC = 2;
    }
  
}


//连接的Meta数据包
message ConnectioMetaPacket{
    required string groupId = 1; //当前客户端连接所属分组名称
    required string secretKey  = 2; //当前连接的授权key
}

//心跳响应包
message HeartBeatACKPacket{
   required int64 ackId = 1;  //响应确认包
}

//事务确认数据包
message TranscationACKPacket{
     required int64 ackId = 1;  //响应确认包
     required string messageId = 2; //消息Id
}

message Header{
    required string messageId = 1;
    required string topic = 2; //topic类型
    required string messageType = 3; //消息类型
    required int64 expiredTime =4; //消息过期时间
    required string groupId = 5; // 消息发送来源
    required bool commited = 6; //本消息是否提交
}

//byte类消息
message BytesMessage{
    required Header  header= 1;
    required  bytes body = 2;    
}


//string类型的message
message StringMessage{
    required Header header = 1;
    required string body = 2;

}

